--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"dotenv": "^14.3.2",
-		"express": "^4.17.2"
+		"express": "^4.17.2",
+		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
